added route to get a specific user role, generate swagger docs
