# backend/routes/api.php
@@ -35,6 +35,7 @@ Route::middleware(["auth:sanctum", "abilities:global_access_scope"])->group(func
      Route::controller(UserController::class)->group(function () {
           Route::get('/users', 'getAll');
           Route::get('/users/role', 'getUserByRole');
+          Route::get('/users/{id}/role', 'getUserRole');
           Route::get('/users/{id}', 'show');
           Route::delete('/users/{id}', 'delete');
           Route::post('/users', 'create');
@@ -144,6 +145,7 @@ Route::middleware(["auth:sanctum", "abilities:user_access_scope"])->group(functi
       Route::controller(UserController::class)->group(function () {
            Route::get('/users', 'getAll');
            Route::get('/users/role', 'getUserByRole');
+           Route::get('/users/{id}/role', 'getUserRole');
            Route::get('/users/{id}', 'show');
            Route::delete('/users/{id}', 'delete');
            Route::post('/users', 'create');
